# Change Log
# All notable changes to this project will be documented in this file.
# This project adheres to [Semantic Versioning](http://semver.org/).
# includes Added / Changed / Fixed

## [0.5.0] UNRELEASED
### Added
- Added `django-environ` to manage environments
- Restored the settings file from settings package
### Changed
- Optimized CLI UI
- Started MySQL/Redis/Supervisor as installed
- `devops` docs

## [0.4.0] 2021-11-07
### Added
- Converted `uWSGI` to `Gunicorn`.

### Changed
- Refactor the deploy command templates.
- Liberalized mysqlclient version.
- Changed yapf COLUMN_LIMIT from 100 to 99.
- Updated to `Python 3.7.9`.
- Updated to `Redis 4.0.14`.

## [0.3.0] 2021-07-05
### Added
- Combined nginx & supervisor to `infrastructure`.

## [0.2.0] 2021-07-05
### Added
- Added code formatter `yapf`.
- Added contrib app `users`

## [0.1.0] 2020-03-05
### Added
- Added `django-rework init` command. It used to create a new project.
- Added `django-rework add` command.
- Added Deploy