@@ -3,6 +3,7 @@ django-cors-headers==3.13.0
 django-environ==0.9.0
 django-filter==22.1
 django-mysql~=4.7
+django-ninja~=0.20
 djangorestframework>=3.13,<4.0
 djangorestframework-simplejwt~=4.4.0
 fabric~=2.7
