@@ -47,5 +47,7 @@ def init(params):
     copy_template_to_file('.gitignore', base_dir, **kwargs)
     copy_template_to_file('.style.yapf', base_dir, **kwargs)
     copy_template_to_file('requirements.txt', base_dir, **kwargs)
+    copy_template_to_file('.env.dist', base_dir, **kwargs)
+    copy_template_to_file('.env', base_dir, **kwargs)
 
     say(f'Initialized completely!', icon='🎨', wrap='C')
