@@ -1,0 +1,8 @@
+# Environ support types:
+# https://django-environ.readthedocs.io/en/latest/types.html
+
+# SECURITY WARNING: don't run with the debug turned on in production!
+DEBUG=True
+
+# Database connection url strings
+DATABASE_URL=mysql://user:password@host:port/dbname
