@@ -23,11 +23,5 @@ static_root/
 # virtual env
 venv
 
-.doc
-
-# Django local settings
-**/settings/local.py
-**/settings/dev.local.py
-
 # Fabric deploy key files
 .deploy/*.pem
