@@ -1,3 +1,0 @@
-from .base import *
-
-DEBUG = False
