@@ -7,6 +7,7 @@
 ### Added
 - Added `django-environ` to manage environments
 - Restored the settings file from settings package
+- Agile API development support Pydantic and FastAPI style with `django-ninja`
 ### Changed
 - Optimized CLI UI
 - Started MySQL/Redis/Supervisor as installed
